# dotnet-tree-sitter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.py  node_generator.py  tree-sitter.sln
TreeSitter/: Node.cs  TreeSitter.csproj
TreeSitter.C/: Generated.cs  TreeSitter.C.csproj
TreeSitter.HTML/: Generated.cs  HTMLLanguage.cs  TreeSitter.HTML.csproj
TreeSitter.JavaScript/: Generated.cs
TreeSitter.Python/: Generated.cs  TreeSitter.Python.csproj
TreeSitter.SCSS/: Generated.cs  SCSSLanguage.cs  TreeSitter.SCSS.csproj
TreeSitter.Test/: TestNode.cs  TestShotgun.cs  TreeSitter.Test.csproj
TreeSitter.Typescript/: Generated.cs  TreeSitter.Typescript.csproj  TypescriptLanguage.cs
